# src/main/java/co/yapp/orbit/fortune/adapter/in/response/FortuneResponse.java
@@ -5,7 +5,7 @@ import lombok.Builder;
 import lombok.Getter;
 
 @Getter
-public class LoadFortuneResponse {
+public class FortuneResponse {
 
     private final Long id;
 
@@ -27,7 +27,7 @@ public class LoadFortuneResponse {
     private final String luckyFood;
 
     @Builder
-    public LoadFortuneResponse(Long id, String dailyFortune, int avgFortuneScore,
+    public FortuneResponse(Long id, String dailyFortune, int avgFortuneScore,
         FortuneItemResponse studyCareerFortune, FortuneItemResponse wealthFortune,
         FortuneItemResponse healthFortune, FortuneItemResponse loveFortune, String luckyOutfitTop,
         String luckyOutfitBottom, String luckyOutfitShoes, String luckyOutfitAccessory,
@@ -48,33 +48,37 @@ public class LoadFortuneResponse {
         this.luckyFood = luckyFood;
     }
 
-    public static LoadFortuneResponse from(Fortune fortune) {
+    public static FortuneResponse from(Fortune fortune) {
 
-        return LoadFortuneResponse.builder()
+        return FortuneResponse.builder()
             .id(fortune.getId())
             .dailyFortune(fortune.getDailyFortune())
             .avgFortuneScore(fortune.getAvgFortuneScore())
             .studyCareerFortune(
                 FortuneItemResponse.builder()
                     .score(fortune.getStudyCareerFortune().getScore())
+                    .title(fortune.getStudyCareerFortune().getTitle())
                     .description(fortune.getStudyCareerFortune().getDescription())
                     .build()
             )
             .wealthFortune(
                 FortuneItemResponse.builder()
                     .score(fortune.getWealthFortune().getScore())
+                    .title(fortune.getWealthFortune().getTitle())
                     .description(fortune.getWealthFortune().getDescription())
                     .build()
             )
             .healthFortune(
                 FortuneItemResponse.builder()
                     .score(fortune.getHealthFortune().getScore())
+                    .title(fortune.getHealthFortune().getTitle())
                     .description(fortune.getHealthFortune().getDescription())
                     .build()
             )
             .loveFortune(
                 FortuneItemResponse.builder()
                     .score(fortune.getLoveFortune().getScore())
+                    .title(fortune.getLoveFortune().getTitle())
                     .description(fortune.getLoveFortune().getDescription())
                     .build()
             )
@@ -91,11 +95,13 @@ public class LoadFortuneResponse {
     @Getter
     public static class FortuneItemResponse {
         private final int score;
+        private final String title;
         private final String description;
 
         @Builder
-        public FortuneItemResponse(int score, String description) {
+        public FortuneItemResponse(int score, String title, String description) {
             this.score = score;
+            this.title = title;
             this.description = description;
         }
     }
